// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Core Constructs CDK Nag Compliance IdpPythonLayerVersion satisfies CDK NAG AwsSolutionsChecks with minimal configuration 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "comamazonawscdkcdklabsgenaiidpidpcommonlayerce8af29eD1F6A0AF": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-L1",
              "reason": "Lambda layer uses supported Python runtime version as required by the IDP framework",
            },
          ],
        },
      },
      "Properties": {
        "CompatibleArchitectures": [
          "x86_64",
        ],
        "CompatibleRuntimes": [
          "python3.12",
        ],
        "Content": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "56e3f94fe185c7d11ec6e2694834808a66c5e680bb6843e8912939d0bf9fc2b1.zip",
        },
        "Description": "Lambda Layer containing the idp_common Python package with modules: core (x86_64)",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Core Constructs CDK Nag Compliance IdpPythonLayerVersion satisfies CDK NAG with comprehensive module configuration 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "comamazonawscdkcdklabsgenaiidpidpcommonlayer5c2fd8de6C8248D1": {
      "Metadata": {
        "cdk_nag": {
          "rules_to_suppress": [
            {
              "id": "AwsSolutions-L1",
              "reason": "Lambda layer uses supported Python runtime version as required by the IDP framework with multiple modules",
            },
          ],
        },
      },
      "Properties": {
        "CompatibleArchitectures": [
          "x86_64",
        ],
        "CompatibleRuntimes": [
          "python3.12",
        ],
        "Content": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "56e3f94fe185c7d11ec6e2694834808a66c5e680bb6843e8912939d0bf9fc2b1.zip",
        },
        "Description": "Lambda Layer containing the idp_common Python package with modules: assessment, classification, ocr (x86_64)",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
